<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">&appName;</string>
    <string name="google_map_api" translatable="false">AIzaSyDGucrP3ZawBDktOPA6rBx6bmamZTFuME4</string>
    <string name="facebook_app_id" translatable="false">1947608288660880</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1947608288660880</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">bd15bdc9cf953d7a2419ccbe4930bd44</string>
    <string name="login_tagline" translatable="false">Verify your account with your phone number. You don\'t need to manually enter verification code if the number install in this phone.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_payment">Payment</string>
    <string name="action_trips">Your Rides</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_wallet">Wallet</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_logout">Logout</string>
    <string name="languages">Language</string>
    <string name="choose_language">Choose Language</string>
    <string-array name="languagelist" tools:ignore="InconsistentArrays">
        <item>English</item>
        <item>Bangla</item>
        <item>Spanish</item>
        <item>Hindi</item>
        <item>Arabic</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>French</item>
    </string-array>
    <string-array name="languagecode" tools:ignore="InconsistentArrays">
        <item>en</item>
        <item>bn</item>
        <item>es</item>
        <item>hi</item>
        <item>ar</item>
        <item>ch</item>
        <item>jp</item>
        <item>fr</item>
    </string-array>
    <string-array name="languagecountrycode" tools:ignore="InconsistentArrays">
        <item>en_GB</item>
        <item>bn_BD</item>
        <item>es_ES</item>
        <item>hi_IN</item>
        <item>ar_SA</item>
        <item>ch_CN</item>
        <item>jp_JB</item>
        <item>fr_FR</item>
    </string-array>
    <string name="skype_id" translatable="false">your_skype_id</string>
    <string name="get_moving_with_tranxit">Get moving with &appName;</string>
    <string name="enter_your_mail_id">Enter your mail ID</string>
    <string name="or_connect_with_social_media">Or connect with social</string>
    <string name="whats_your_mail_address">What\'s your email address?</string>
    <string name="sample_mail_id" translatable="false">name@examplecom</string>
    <string name="welcome_back">Welcome back, sign in to continue </string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="apply">APPLY</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_no" translatable="false">9876543210</string>
    <string name="password_txt" translatable="false">******</string>
    <string name="recover_password">Enter your mail ID for recovery</string>
    <string name="enter_the_coupon">Enter coupon code</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="add_coupon_code">Add Coupon code</string>
    <string name="sign_in">Login</string>
    <string name="signup">Sign up</string>
    <string name="fresh">W e l c o m e</string>
    <string name="search">P i c k  U p</string>
    <string name="bookmark">D e l i v e r</string>
    <string name="fresh_description">Introducing &appName; Services to Deliver your Food where you need. A lot can happen, shortly with our service. </string>
    <string name="search_description">Take a &service; whenever and wherever you want. Plan and Schedule for us to pick up.</string>
    <string name="bookmark_description">We have the most friendly &provider;. You can review your professional &provider;
        to help our community.</string>
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated</string>
    <string name="where_to_go">Where are you going ?</string>
    <string name="extend_trip">Extend Trip?</string>
    <string name="selected_option">Economy</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="select_service">Select Service</string>
    <string name="change">Change</string>
    <string name="request_xuber">Request &Service;</string>
    <string name="schedule">Schedule a &Service;</string>
    <string name="change_date">Change</string>
    <string name="sample_date">Choose a date</string>
    <string name="sample_time">Choose a time</string>
    <string name="next">Schedule Request</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time</string>
    <string name="choose_date_time">Please choose date and time for schedule</string>
    <string name="upcoming_trips">Upcoming Rides</string>
    <string name="past_trips">Past Rides</string>
    <string name="service_list_item" translatable="false">Jaguar</string>
    <string name="no_route">There is no route, choose different destination</string>
    <string name="choose_payment">Choose payment method</string>
    <string name="approximate">Estimated Fare</string>
    <string name="sample_rate" translatable="false">$1234</string>
    <string name="include_all">Including all other charges</string>
    <string name="confirm_your_pickup">Confirm your Pickup</string>
    <string name="confirm">Confirm Pickup</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="looking_for_ride">Finding &Service;....</string>
    <string name="cancel_ride">Cancel &service;</string>
    <string name="share">Share</string>
    <string name="cancel_ride_alert">Are you sure want to cancel the &service;?</string>
    <string name="no_providers_found">No one found at the moment to take your &service;, Please try after sometime</string>
    <string name="no_drivers_found">No &provider; available to take your ride</string>
    <string name="driver_busy">Your ride was cancelled by the &provider;.Please contact us for support</string>
    <string name="retry">Retry Now</string>
    <string name="try_later">Later</string>
    <string name="sample_name">""</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Call</string>
    <string name="cancel_trip">Cancel</string>
    <string name="surge_pricing">Due to peak hours, charges will be vary based on availability of providers</string>
    <string name="pickup_drop">Please enter both pickup and drop locations</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payments">Add Card for payments</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Credit/Debit Card Number</string>
    <string name="sample_card_no" translatable="false">XXXX - XXXX - XXXX - XXXX</string>
    <string name="month_and_year" translatable="false">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="add">Add Card</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="are_you_sure">Are you sure want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrived">&Provider; has arrived at your location</string>
    <string name="picked_up">you are on &service;</string>
    <string name="dropped">&Service; has completed</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past rides</string>
    <string name="no_upcoming_trips">You have no upcoming rides</string>
    <string name="your_trips">Your Rides</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="invoice">Invoice</string>
    <string name="base_price">Base fare</string>
    <string name="booking_id">Booking ID</string>
    <string name="sample_base_price" translatable="false">0</string>
    <string name="sample_distance" translatable="false">0</string>
    <string name="sample_time_travel" translatable="false">0</string>
    <string name="extra_price">Extra</string>
    <string name="tax">Tax</string>
    <string name="wallet_detection">Wallet Detection</string>
    <string name="discount_detection">Discount Applied</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="distance_price">Distance fare</string>
    <string name="rate_provider">Rate your ride with</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit">Submit</string>
    <string name="source_location">Your location</string>
    <string name="destination_location">Where to?</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="change_pwd_dialog">Your password has updated successfully. Please login with your new password.</string>
    <string name="cencel_request">Are you sure you want to cancel the &service;?</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet</string>
    <string name="server_down">Unable to reach server</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_wait">Please wait...</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="first_name_empty">First name required</string>
    <string name="last_name_empty">Last name required</string>
    <string name="mobile_number_empty">Mobile number required</string>
    <string name="mobile_number_validation">Mobile number must have numbers between 10 to 20 digits</string>
    <string name="your_cards">Your Cards</string>
    <string name="enter_details_register">Enter your details to register</string>
    <string name="fb_cancel">Facebook login cancelled</string>
    <string name="fb_error">Facebook login failed</string>
    <string name="google_login">Google login failed</string>
    <string name="social_cancel">Social login cancelled</string>
    <string name="registration_failed">Registration cancelled</string>
    <string name="True" translatable="false">true</string>
    <string name="False" translatable="false">false</string>
    <string name="add_money_using">Add money using</string>
    <string name="not_vaild_coupon">Coupon is not valid or may expired</string>
    <string name="coupon_added">Coupon applied successfully</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next_btn">Next</string>
</resources>