<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_drawable" />


        <com.taxitime.rideo.Utils.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/whats_your_mail_address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:id="@+id/lnrBegin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.taxitime.rideo.Utils.MyEditText
                    android:id="@+id/enter_ur_mailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />





            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/email_layout"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">



            <com.taxitime.rideo.Utils.MyTextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/i_forgot_my_password"
                android:textColor="@color/com_facebook_blue"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:visibility="gone" />

            <com.taxitime.rideo.Utils.MyTextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:text="@string/i_need_to_create_an_account"
                android:textColor="@color/com_facebook_blue"
                android:textSize="14sp" />


            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_btn"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/lato_light"
                android:background="@color/bg_2"/>


        </LinearLayout>

    </LinearLayout>




</RelativeLayout>