<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@drawable/welcome_background"
    tools:context=".Activities.BeginScreen">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:layout_marginBottom="8dp"
            android:elevation="1dp"
            app:cardBackgroundColor="@color/semiTransparentColor"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="217dp"
                        android:layout_height="199dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@mipmap/ic_launcher_main" />
                </LinearLayout>
                <TextView
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Get Your Services In Minutes"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/sign_in_btn"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_splash"
                    tools:targetApi="lollipop" />

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_width="120dp"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"/>
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OR"/>
                    <View
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:layout_width="120dp"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"/>
                </LinearLayout>
                <Button
                    android:id="@+id/sign_up_btn"
                    android:elevation="2dp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_splash"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/prip"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/privacy_policy"/>
                <ImageView
                    android:visibility="gone"
                    android:id="@+id/phonelogin"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>